parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-4.snap
---
source: parser/src/parser/parser.rs
description: "def a(a, *b, **c): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 23,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 23,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 6,
                        end: 16,
                    },
                    posonlyargs: [],
                    args: [
                        Arg {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            arg: "a",
                            annotation: None,
                        },
                    ],
                    vararg: Some(
                        Arg {
                            node: Node {
                                start: 10,
                                end: 11,
                            },
                            arg: "b",
                            annotation: None,
                        },
                    ),
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: Some(
                        Arg {
                            node: Node {
                                start: 15,
                                end: 16,
                            },
                            arg: "c",
                            annotation: None,
                        },
                    ),
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 19,
                                end: 23,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
