parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py-2.snap
---
source: parser/src/parser/parser.rs
description: "match a:\n    case 1 | 2:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 37,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 37,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 37,
                        },
                        pattern: MatchOr(
                            [
                                MatchValue(
                                    MatchValue {
                                        node: Node {
                                            start: 18,
                                            end: 19,
                                        },
                                        value: Constant(
                                            Constant {
                                                node: Node {
                                                    start: 18,
                                                    end: 19,
                                                },
                                                value: 1,
                                            },
                                        ),
                                    },
                                ),
                                MatchValue(
                                    MatchValue {
                                        node: Node {
                                            start: 22,
                                            end: 23,
                                        },
                                        value: Constant(
                                            Constant {
                                                node: Node {
                                                    start: 22,
                                                    end: 23,
                                                },
                                                value: 2,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 33,
                                        end: 37,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
