parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py-3.snap
---
source: parser/src/parser/parser.rs
description: "match a.b:\n    case 1:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 35,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 35,
                },
                subject: Attribute(
                    Attribute {
                        node: Node {
                            start: 6,
                            end: 9,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 6,
                                    end: 7,
                                },
                                id: "a",
                            },
                        ),
                        attr: "b",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 15,
                            end: 35,
                        },
                        pattern: MatchValue(
                            MatchValue {
                                node: Node {
                                    start: 20,
                                    end: 21,
                                },
                                value: Constant(
                                    Constant {
                                        node: Node {
                                            start: 20,
                                            end: 21,
                                        },
                                        value: Int(
                                            "1",
                                        ),
                                    },
                                ),
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 31,
                                        end: 35,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
